--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   shared_preferences: ^2.3.3
+  url_launcher: ^6.3.1
+  flutter_custom_tabs:
   
 
 dev_dependencies:
